Day 1 -- 2/17/16
	Starting work on assign 1.04. Reading through the assignment pdf and wondering how the heck I
	am going to get this done :S
	Gonna start by making the PC move around randomly to neighboring cells.
	UPDATE: Got player to move around to random locations easily. It just scans all the surrounding
	locations and records the valid spots(no tunneling) and picks one to move to. It also calculates
	a distance map each time the grid updates. I am not currently doing anything with the distance maps
	other than calculating them. Character also cannot stay in the same place. He has to move. He can move
	back to his previous spot though.

	Next Goal: Create the --nummon amount of monsters.
	Finished!
	Got the command line parameters ironed out so you can input the number of monsters you want to add.
	it doesnt let you skip the number at this point so if you do --nummon and don't provide a number,
	it will throw an error.
	otherwise you can save and load dungeons just as before.